@@ -16,3 +16,4 @@ v1.0
 -Pass gender in ajax call for adding employee.
 -Remove email validation over email field (implicit it is @metacube.com)
 -Search the mongodb and send the appropriate data to client.
+-Add Search page and sample table
